# GoldenFingerAgent

./: .env.example  .gitignore  README.md  _test_deep.py  _test_import.py  pyproject.toml  requirements.txt  产品架构.md  金手指Agent产品架构v2.md  金手指Agent实施路线图.md  金手指Agent系统设计文档.md
.goldenfinger/memory/: constitution.md
.goldenfinger/templates/: design-template.md  plan-template.md  proposal-template.md  skill-template.md  spec-template.md  tasks-template.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: MonitorDashboard.vue
frontend/src/composables/: useSSE.ts
golden_finger/: __init__.py  __main__.py  api.py  cli.py  config.py  domain_analysis.py  domain_execution.py  domain_isolation.py  domain_persistence.py  domain_verification.py  harness.py  host_env.py  llm.py  logging.py  models.py  sdd_commands.py  skill_trigger.py  utils.py
golden_finger/skills/: __init__.py  base.py  brainstorming.py  code_assistant.py  dispatching_parallel_agents.py  executing_plans.py  file_operations.py  finishing_branch.py  knowledge.py  receiving_code_review.py  registry.py  requesting_code_review.py  systematic_debugging.py  tdd_enforcer.py  using_git_worktrees.py  writing_plans.py  writing_skills.py
golden_finger/storage/: __init__.py  sqlite_store.py  vector_store.py
golden_finger/tools/: __init__.py  base.py  builtin.py  sandbox.py
golden_finger/tui/: __init__.py  app.py  chat.py  clipboard.py  commands.py  constants.py  pipeline.py  screens.py  tui.tcss  widgets.py
