[project]
name = "golden-finger"
version = "0.1.0"
description = "金手指 Agent 系统 - 像小说主角的金手指一样带领你成长"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "chromadb>=0.4",
    "cryptography>=41.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "textual>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
gfa = "golden_finger.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["golden_finger*"]
